# FastLanes

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/actions/generate-dataset/: action.yml
.github/actions/install-llvm/: action.yml
.github/workflows/: CI.yaml  benchmark.yaml  build-python.yml  build_wheels.yml  cli.yaml  compression_ratio.yaml  cpp.yaml  cuda.yml  discord-notify.yml  examples.yml  flatbuffers-ci.yml  galp.yaml  license-header.yml  notify-dev-pr.yml  quick-fuzz.yml  rust.yml
benchmark/: CMakeLists.txt  bench_compression_ratio.cpp  bench_compression_time.cpp  bench_decompression_time.cpp  bench_random_access.cpp  micro_benchmark_decompression.cpp
benchmark/include/: benchmark_utils.hpp  benchmarker.hpp
cli/: CMakeLists.txt  main.cpp
cmake/: enable_sanitizer.cmake
cuda/: CMakeLists.txt  cuda_reader.cu
data/image/: 5547758_eea9edfd54_n_rec_dct.csv  analyze.py  schema.json
data/image/raw64/: 5547758_eea9edfd54_n.csv  schema.json
data/image/raw_index/: 5547758_eea9edfd54_n.csv
data/image/raw_nonzero/: 5547758_eea9edfd54_n.csv
data/image/raw_stream/: 5547758_eea9edfd54_n.csv  schema.json
data/image/zigzag64/: 5547758_eea9edfd54_n.csv
data/image/zigzag_blocks/: 5547758_eea9edfd54_n.csv
data/image/zigzag_index_stream/: 5547758_eea9edfd54_n.csv
data/image/zigzag_nonzero/: 5547758_eea9edfd54_n.csv
data/image/zigzag_stream/: 5547758_eea9edfd54_n.csv  schema.json
data/include/data/: fastlanes_data.hpp  galp.hpp  generated.hpp  (+2 more)
examples/: cpp_example.cpp  python_example.py
examples/fetch_content_example/: CMakeLists.txt  example.cpp
examples/rust_example/: Cargo.toml  rs_example.rs
flatbuffers_schemas/: operator_token.fbs
galp/: CMakeLists.txt  Makefile
galp/benchamrk/: CMakeLists.txt  compressors-benchmarks.cu
galp/benchmark/include/generated-bindings/: multi-column-device-kernels.cuh
galp/data/: Makefile  generate_floats_binary.py
galp/galp/test/: thrust_memcpy_test.cu
galp/include/alp/: alp-bindings.cuh  constants.hpp  encoder.hpp  storer.hpp
galp/include/engine/: data.cuh  device-utils.cuh  enums.cuh  kernels.cuh  multi-column-host-kernels.cuh  verification.cuh
galp/include/fls/: fls-bindings.hpp
galp/include/flsgpu/: alp.cuh  consts.cuh  device-types.cuh  fls-switch-case.cuh  fls.cuh  old-fls.cuh  structs.cuh  utils.cuh
galp/include/galp/: galp.hpp
galp/include/generated-bindings/: kernel-bindings.cuh  multi-column-device-kernels.cuh
galp/include/generator/: generate_binaries.hpp
galp/include/nvcomp/: benchmark-compressors.cuh  nvcomp-compressors.cuh
galp/src/: compressors-benchmarks.cu
galp/src/alp/: alp-bindings.cu  falp.cpp
galp/src/engine/: enums.cu
galp/src/fls/: ffor.cpp  pack.cpp  unffor.cpp  unpack.cpp
galp/src/generated-bindings/: alp-double-decompress_column-bindings.cu  alp-double-query_column-bindings.cu  alp-double-query_multi_column-bindings.cu  alp-float-decompress_column-bindings.cu  alp-float-query_column-bindings.cu  alp-float-query_multi_column-bindings.cu  alpextended-double-decompress_column-bindings.cu  alpextended-double-query_column-bindings.cu  alpextended-double-query_multi_column-bindings.cu  alpextended-float-decompress_column-bindings.cu  alpextended-float-query_column-bindings.cu  alpextended-float-query_multi_column-bindings.cu  bp-uint32_t-decompress_column-bindings.cu  bp-uint32_t-query_column-bindings.cu  bp-uint64_t-decompress_column-bindings.cu  bp-uint64_t-query_column-bindings.cu  ffor-uint32_t-compute_column-bindings.cu  ffor-uint32_t-decompress_column-bindings.cu  ffor-uint32_t-query_column-bindings.cu  ffor-uint32_t-query_multi_column-bindings.cu  ffor-uint64_t-compute_column-bindings.cu  ffor-uint64_t-decompress_column-bindings.cu  ffor-uint64_t-query_column-bindings.cu  ffor-uint64_t-query_multi_column-bindings.cu
galp/src/include/flsgpu/: alp.cuh
galp/src/nvcomp/: benchmark-compressors.cu  nvcomp-compressors.cu
galp/test/: CMakeLists.txt  galp_test.cu
generate_jpeg_middle_data/: download_data.sh  fastlanes.cpp  jpeg_decode_to_csv.cpp  makefile  readme.md  stb_image.h
include/fls/: connection.hpp  info.hpp
jpeg_playground/: CMakeLists.txt  jpeg_analyze.cpp  jpeg_decode_to_csv.cpp  readme.md  stb_image.h
jpeg_playground/example/jpeg_colorspace/: jpeg_colorspace.csv  schema.json
jpeg_playground/example/jpeg_idct/: jpeg_idct.csv  schema.json
jpeg_playground/example/jpeg_quant/: jpeg_quant.csv
jpeg_playground/example/jpeg_quant_sc/: jpeg_quant_sc.csv
jpeg_playground/example/jpeg_quant_transposed/: jpeg_quant_transposed.csv
jpeg_playground/example/jpeg_quant_transposed_zig/: schema.json
jpeg_playground/include/: dct_extractor.hpp  meta.hpp  process.hpp
mk/: compression_report.mk  data.mk  embeddings.mk  example.mk  flatbuffers.mk  format.mk  python.mk  rust.mk
pyfastlanes/: __init__.py
python/: CMakeLists.txt  connection.cpp  fastlanes_bindings.cpp
python/bindings/: connection.cpp  connection_binding.cpp  init.cpp  table_reader.cpp  table_reader_binding.cpp
python/fastlanes/: __init__.py
python/pyfastlanes/: __init__.py
python/tests/: test_verify_fls.py  test_version.py
rust/: Cargo.toml  build.rs
scripts/: add_license_header.py  compression_report.py  generate_synthetic_data.py  publish-crate.sh  set_fastlanes_version.py  set_fastlanes_version.sh
scripts/generator_helpers/: date_generator.py  galp_generator.py  i08_generator.py  list_generator.py  struct_generator.py  u08_generator.py
src/: CMakeLists.txt
src/expression/: analyze_operator.cpp  data_parallelize_patch_operator.cpp  encoding_operator.cpp  expression_executor.cpp  interpreter.cpp  physical_expression.cpp  rpn.cpp  slpatch_operator.cpp
src/file/: file_header.cpp
src/io/: file.cpp  io.cpp
src/json/: fls_json.cpp
src/reader/: reader.cpp  segment.cpp
src/std/: filesystem.cpp
src/table/: rowgroup.cpp
src/types/: timestamp.cpp
src/wizard/: wizard.cpp
test/include/: fls_tester.hpp
test/src/: CMakeLists.txt
test/src/quick_fuzz_tests/: CMakeLists.txt  fuzz_config.json  quick_fuzz_test.cpp
(+48 files in other folders)
