[build-system]
requires = [
    "scikit-build-core>=0.7",
    "pybind11>=2.12",
    "setuptools_scm[toml]>=7"
]
build-backend = "scikit_build_core.build"

[project]
name = "FastLanes"
description = "FastLanes File Format"
authors = [{ name = "Azim Afroozeh", email = "azim@cwi.nl" }]
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools-scm]
version_scheme = "post-release"

[tool.scikit-build.wheel]
license-files = ["LICENSE"]

[tool.cibuildwheel]
test-command = "pytest -q"

[tool.scikit-build]
build-dir = "skbuild-editable"
editable.mode = "redirect"
cmake.args = [
    "-DFLS_BUILD_PYTHON=ON",
    "-DFLS_ENABLE_VERBOSE_OUTPUT=ON"
]
