[package]
name = "fls-rs"
version = "0.1.3-alpha.2"
edition = "2021"
authors = ["Azim Afroozeh <afroozeh3@gmail.com>"]
description = "FastLanes File Format"
license = "MIT"
repository = "https://github.com/cwida/FastLanes"
homepage = "https://fastlanes.io"
documentation = "https://docs.rs/fls-rs"
readme = "README.md"
keywords = ["FastLanes", "FileFormat", "Compression"]
categories = ["database", "compression"]
exclude = ["/build/*"]
include = ["src/**", "build.rs", "fastlanes-src.tar.gz", "Cargo.toml"]

[badges]
[badges.docsrs]
status = "true"

[badges."github-actions"]
repository = "cwida/FastLanes"
workflow = "rust"

[dependencies]
cxx = "1.0"
anyhow = "1.0"

[build-dependencies]
cmake = "0.1"
cxx-build = "1"
flate2 = "1"
tar = "0.4"

