# rust/Cargo.tmol

[package]
name = "fls-rs"
version = "0.0.0"
build = "build.rs"
edition = "2021"
authors = ["Azim Afroozeh <afroozeh3@gmail.com>"]
description = "FastLanes File Format"
license = "MIT"
repository = "https://github.com/cwida/FastLanes"
homepage = "https://fastlanes.io"
documentation = "https://docs.rs/fls-rs"
readme = "README.md"
keywords = ["FastLanes", "FileFormat", "Compression"]
categories = ["database", "compression"]

# Ship only what the crate needs
include = [
    "src/**",
    "bridge_shim.cpp",
    "bridge_shim.hpp",
    "build.rs",
    "fastlanes-src.tar.gz",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[badges]
[badges.docsrs]
status = "true"
[badges."github-actions"]
repository = "cwida/FastLanes"
workflow = "rust"

[dependencies]
cxx = "1"
anyhow = "1"

[build-dependencies]
vergen = { version = "9.0.6", default-features = false, features = ["git", "build"] }
cmake = "0.1"
cxx-build = "1"
flate2 = "1"
tar = "0.4"
